--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,14 @@
 {
-	// Visit https://aka.ms/tsconfig to read more about this file
 	"compilerOptions": {
-		// File Layout
-		"rootDir": "./src",
-		"outDir": "./output",
-		// Environment Settings
-		// See also https://aka.ms/tsconfig/module
 		"module": "ES2022",
 		"moduleResolution": "bundler",
 		"target": "ES2022",
-		"types": ["@cloudflare/workers-types"],
 		"lib": ["ES2022"],
-		// Other Outputs
 		"sourceMap": true,
 		"declaration": true,
 		"declarationMap": true,
-		// Stricter Typechecking Options
 		"noUncheckedIndexedAccess": true,
 		"exactOptionalPropertyTypes": false,
-		// Style Options
-		// "noImplicitReturns": true,
-		// "noImplicitOverride": true,
-		// "noUnusedLocals": true,
-		// "noUnusedParameters": true,
-		// "noFallthroughCasesInSwitch": true,
-		// "noPropertyAccessFromIndexSignature": true,
-		// Recommended Options
 		"strict": true,
 		"verbatimModuleSyntax": true,
 		"isolatedModules": true,
@@ -35,5 +18,9 @@
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
 		"noEmit": true
-	}
+	},
+	"references": [
+		{ "path": "./packages/core" },
+		{ "path": "./packages/cloudflare" }
+	]
 }
