--- a/packages/cloudflare/wrangler.jsonc
+++ b/packages/cloudflare/wrangler.jsonc
@@ -7,13 +7,13 @@
 		{
 			"binding": "SuccessMainDatabase",
 			"database_name": "success-main-database",
-			"database_id": "1fd00513-fd97-4a00-9d2e-65d5a145b768",
-		},
+			"database_id": "1fd00513-fd97-4a00-9d2e-65d5a145b768"
+		}
 	],
 	"kv_namespaces": [
 		{
 			"binding": "SuccessKV",
-			"id": "46267b589685446a9ed90adb5310c1c8",
-		},
-	],
+			"id": "46267b589685446a9ed90adb5310c1c8"
+		}
+	]
 }
