--- a/packages/cloudflare/wrangler.jsonc
+++ b/packages/cloudflare/wrangler.jsonc
@@ -17,6 +17,9 @@
 			"id": "46267b589685446a9ed90adb5310c1c8"
 		}
 	],
+	"vars": {
+		"CLERK_SECRET_KEY": "your_clerk_secret_key_here"
+	},
 	"observability": {
     "enabled": false,
     "head_sampling_rate": 1,
@@ -24,12 +27,14 @@
       "enabled": true,
       "head_sampling_rate": 1,
       "persist": true,
-      "invocation_logs": true
+      "invocation_logs": true,
+      "request_logs": true
     },
     "traces": {
       "enabled": true,
       "persist": true,
       "head_sampling_rate": 1
     }
+  }
   }
 }
